--- a/locales/ru.json
+++ b/locales/ru.json
@@ -15,9 +15,9 @@
 	"exploreCourses": "Изучайте Популярные Курсы",
 	"exploreCoursesDescription": "10,000+ уникальных дизайнов курсов",
 	"cateogry1": "Все",
-	"cateogry2": "В тренде",
-	"cateogry3": "Популярные",
-	"cateogry4": "Рекомендуемые",
+	"cateogry2": "Новые",
+	"cateogry3": "Низкая цена",
+	"cateogry4": "Высокая цена",
 	"topCategories": "Топ Категории",
 	"topCategoriesDescription": "Изучайте лучшие категории",
 	"viewAll": "Просмотреть все",
